--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,28 @@
 #
 aniso8601==9.0.1
     # via flask-restful
+annotated-types==0.7.0
+    # via pydantic
 ansible==10.0.1
     # via -r requirements.in
 ansible-base==2.10.17
     # via -r requirements.in
 ansible-core==2.17.0
     # via ansible
+anyio==4.4.0
+    # via
+    #   httpx
+    #   openai
 attrs==23.2.0
     # via
     #   jsonschema
     #   referencing
 blinker==1.8.2
     # via flask
+certifi==2024.6.2
+    # via
+    #   httpcore
+    #   httpx
 cffi==1.16.0
     # via cryptography
 click==8.1.7
@@ -30,6 +40,8 @@ dataclasses-jsonschema==2.16.0
     # via -r requirements.in
 decorators==2.0.7
     # via -r requirements.in
+distro==1.9.0
+    # via openai
 dynaconf==3.2.5
     # via -r requirements.in
 flask==3.0.3
@@ -53,6 +65,16 @@ grpcio==1.64.1
     # via -r requirements.in
 gunicorn==22.0.0
     # via -r requirements.in
+h11==0.14.0
+    # via httpcore
+httpcore==1.0.5
+    # via httpx
+httpx==0.27.0
+    # via openai
+idna==3.7
+    # via
+    #   anyio
+    #   httpx
 itsdangerous==2.2.0
     # via flask
 jinja2==3.1.4
@@ -68,6 +90,8 @@ markupsafe==2.1.5
     # via
     #   jinja2
     #   werkzeug
+openai==1.35.3
+    # via -r requirements.in
 packaging==24.1
     # via
     #   ansible-base
@@ -79,6 +103,10 @@ psycopg2-binary==2.9.9
     # via -r requirements.in
 pycparser==2.22
     # via cffi
+pydantic==2.7.4
+    # via openai
+pydantic-core==2.18.4
+    # via pydantic
 python-dateutil==2.9.0.post0
     # via dataclasses-jsonschema
 pytz==2024.1
@@ -101,11 +129,22 @@ six==1.16.0
     # via
     #   flask-restful
     #   python-dateutil
+sniffio==1.3.1
+    # via
+    #   anyio
+    #   httpx
+    #   openai
 sqlalchemy==2.0.30
     # via
     #   -r requirements.in
     #   flask-sqlalchemy
+tqdm==4.66.4
+    # via openai
 typing-extensions==4.12.2
-    # via sqlalchemy
+    # via
+    #   openai
+    #   pydantic
+    #   pydantic-core
+    #   sqlalchemy
 werkzeug==3.0.3
     # via flask
